// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`investment and realized-gain HTTP parity > reports positions from the split replay with lot cost basis > book 1`] = `
[
  {
    "costBasisCents": 250,
    "marketValueCents": 250,
    "priceDate": "<today>",
    "priceMicros": 1000000,
    "securityId": 2,
    "securityName": "Bond Fund",
    "securitySymbol": "BND",
    "sharesMicros": 2500000,
  },
  {
    "costBasisCents": 72600,
    "marketValueCents": 36100,
    "priceDate": "2025-06-02",
    "priceMicros": 120333333,
    "securityId": 1,
    "securityName": "Vanguard Total",
    "securitySymbol": "VTI",
    "sharesMicros": 3000000,
  },
]
`;

exports[`investment and realized-gain HTTP parity > reports positions from the split replay with lot cost basis > brokerage 1`] = `
[
  {
    "costBasisCents": 250,
    "marketValueCents": 250,
    "priceDate": "<today>",
    "priceMicros": 1000000,
    "securityId": 2,
    "securityName": "Bond Fund",
    "securitySymbol": "BND",
    "sharesMicros": 2500000,
  },
  {
    "costBasisCents": 52500,
    "marketValueCents": 60167,
    "priceDate": "2025-06-02",
    "priceMicros": 120333333,
    "securityId": 1,
    "securityName": "Vanguard Total",
    "securitySymbol": "VTI",
    "sharesMicros": 5000000,
  },
]
`;

exports[`investment and realized-gain HTTP parity > reports realized gains per allocation, unallocated shares, and totals > 2025 1`] = `
{
  "rows": [
    {
      "accountId": 3,
      "accountName": "Closed Brokerage",
      "acquiredDate": "2024-02-20",
      "basisCents": 9950,
      "gainCents": 1250,
      "proceedsCents": 11200,
      "securityId": 1,
      "securityName": "Vanguard Total",
      "securitySymbol": "VTI",
      "sellDate": "2025-02-20",
      "sharesMicros": 1000000,
      "term": "short",
      "transactionId": 10,
    },
    {
      "accountId": 3,
      "accountName": "Closed Brokerage",
      "acquiredDate": "2024-02-20",
      "basisCents": 9950,
      "gainCents": 1250,
      "proceedsCents": 11200,
      "securityId": 1,
      "securityName": "Vanguard Total",
      "securitySymbol": "VTI",
      "sellDate": "2025-02-21",
      "sharesMicros": 1000000,
      "term": "long",
      "transactionId": 11,
    },
    {
      "accountId": 3,
      "accountName": "Closed Brokerage",
      "acquiredDate": "2024-02-29",
      "basisCents": 10050,
      "gainCents": 1150,
      "proceedsCents": 11200,
      "securityId": 1,
      "securityName": "Vanguard Total",
      "securitySymbol": "VTI",
      "sellDate": "2025-03-01",
      "sharesMicros": 1000000,
      "term": "short",
      "transactionId": 12,
    },
    {
      "accountId": 3,
      "accountName": "Closed Brokerage",
      "acquiredDate": "2024-02-29",
      "basisCents": 10050,
      "gainCents": 1150,
      "proceedsCents": 11200,
      "securityId": 1,
      "securityName": "Vanguard Total",
      "securitySymbol": "VTI",
      "sellDate": "2025-03-02",
      "sharesMicros": 1000000,
      "term": "long",
      "transactionId": 13,
    },
    {
      "accountId": 1,
      "accountName": "Brokerage",
      "acquiredDate": "2024-01-02",
      "basisCents": 190005,
      "gainCents": 18993,
      "proceedsCents": 208998,
      "securityId": 1,
      "securityName": "Vanguard Total",
      "securitySymbol": "VTI",
      "sellDate": "2025-03-05",
      "sharesMicros": 19000000,
      "term": "long",
      "transactionId": 6,
    },
    {
      "accountId": 1,
      "accountName": "Brokerage",
      "acquiredDate": "2024-01-02",
      "basisCents": 52500,
      "gainCents": 2499,
      "proceedsCents": 54999,
      "securityId": 1,
      "securityName": "Vanguard Total",
      "securitySymbol": "VTI",
      "sellDate": "2025-03-05",
      "sharesMicros": 5000000,
      "term": "long",
      "transactionId": 6,
    },
    {
      "accountId": 2,
      "accountName": "IRA",
      "acquiredDate": "2024-02-15",
      "basisCents": 61500,
      "gainCents": 7499,
      "proceedsCents": 68999,
      "securityId": 1,
      "securityName": "Vanguard Total",
      "securitySymbol": "VTI",
      "sellDate": "2025-04-01",
      "sharesMicros": 6000000,
      "term": "long",
      "transactionId": 8,
    },
    {
      "accountId": 2,
      "accountName": "IRA",
      "acquiredDate": null,
      "basisCents": null,
      "gainCents": null,
      "proceedsCents": 46000,
      "securityId": 1,
      "securityName": "Vanguard Total",
      "securitySymbol": "VTI",
      "sellDate": "2025-04-01",
      "sharesMicros": 4000000,
      "term": "unknown",
      "transactionId": 8,
    },
  ],
  "totals": {
    "basisCents": 344005,
    "longTermGainCents": 31391,
    "proceedsCents": 377796,
    "shortTermGainCents": 2400,
    "unknownBasisRows": 1,
  },
}
`;

exports[`investment and realized-gain HTTP parity > reports realized gains per allocation, unallocated shares, and totals > all 1`] = `
{
  "rows": [
    {
      "accountId": 1,
      "accountName": "Brokerage",
      "acquiredDate": "2024-01-02",
      "basisCents": 10000,
      "gainCents": 500,
      "proceedsCents": 10500,
      "securityId": 1,
      "securityName": "Vanguard Total",
      "securitySymbol": "VTI",
      "sellDate": "2024-09-10",
      "sharesMicros": 1000000,
      "term": "short",
      "transactionId": 7,
    },
    {
      "accountId": 3,
      "accountName": "Closed Brokerage",
      "acquiredDate": "2024-02-20",
      "basisCents": 9950,
      "gainCents": 1250,
      "proceedsCents": 11200,
      "securityId": 1,
      "securityName": "Vanguard Total",
      "securitySymbol": "VTI",
      "sellDate": "2025-02-20",
      "sharesMicros": 1000000,
      "term": "short",
      "transactionId": 10,
    },
    {
      "accountId": 3,
      "accountName": "Closed Brokerage",
      "acquiredDate": "2024-02-20",
      "basisCents": 9950,
      "gainCents": 1250,
      "proceedsCents": 11200,
      "securityId": 1,
      "securityName": "Vanguard Total",
      "securitySymbol": "VTI",
      "sellDate": "2025-02-21",
      "sharesMicros": 1000000,
      "term": "long",
      "transactionId": 11,
    },
    {
      "accountId": 3,
      "accountName": "Closed Brokerage",
      "acquiredDate": "2024-02-29",
      "basisCents": 10050,
      "gainCents": 1150,
      "proceedsCents": 11200,
      "securityId": 1,
      "securityName": "Vanguard Total",
      "securitySymbol": "VTI",
      "sellDate": "2025-03-01",
      "sharesMicros": 1000000,
      "term": "short",
      "transactionId": 12,
    },
    {
      "accountId": 3,
      "accountName": "Closed Brokerage",
      "acquiredDate": "2024-02-29",
      "basisCents": 10050,
      "gainCents": 1150,
      "proceedsCents": 11200,
      "securityId": 1,
      "securityName": "Vanguard Total",
      "securitySymbol": "VTI",
      "sellDate": "2025-03-02",
      "sharesMicros": 1000000,
      "term": "long",
      "transactionId": 13,
    },
    {
      "accountId": 1,
      "accountName": "Brokerage",
      "acquiredDate": "2024-01-02",
      "basisCents": 190005,
      "gainCents": 18993,
      "proceedsCents": 208998,
      "securityId": 1,
      "securityName": "Vanguard Total",
      "securitySymbol": "VTI",
      "sellDate": "2025-03-05",
      "sharesMicros": 19000000,
      "term": "long",
      "transactionId": 6,
    },
    {
      "accountId": 1,
      "accountName": "Brokerage",
      "acquiredDate": "2024-01-02",
      "basisCents": 52500,
      "gainCents": 2499,
      "proceedsCents": 54999,
      "securityId": 1,
      "securityName": "Vanguard Total",
      "securitySymbol": "VTI",
      "sellDate": "2025-03-05",
      "sharesMicros": 5000000,
      "term": "long",
      "transactionId": 6,
    },
    {
      "accountId": 2,
      "accountName": "IRA",
      "acquiredDate": "2024-02-15",
      "basisCents": 61500,
      "gainCents": 7499,
      "proceedsCents": 68999,
      "securityId": 1,
      "securityName": "Vanguard Total",
      "securitySymbol": "VTI",
      "sellDate": "2025-04-01",
      "sharesMicros": 6000000,
      "term": "long",
      "transactionId": 8,
    },
    {
      "accountId": 2,
      "accountName": "IRA",
      "acquiredDate": null,
      "basisCents": null,
      "gainCents": null,
      "proceedsCents": 46000,
      "securityId": 1,
      "securityName": "Vanguard Total",
      "securitySymbol": "VTI",
      "sellDate": "2025-04-01",
      "sharesMicros": 4000000,
      "term": "unknown",
      "transactionId": 8,
    },
  ],
  "totals": {
    "basisCents": 354005,
    "longTermGainCents": 31391,
    "proceedsCents": 388296,
    "shortTermGainCents": 2900,
    "unknownBasisRows": 1,
  },
}
`;

exports[`investment and realized-gain HTTP parity > reports realized gains per allocation, unallocated shares, and totals > ira 1`] = `
{
  "rows": [
    {
      "accountId": 2,
      "accountName": "IRA",
      "acquiredDate": "2024-02-15",
      "basisCents": 61500,
      "gainCents": 7499,
      "proceedsCents": 68999,
      "securityId": 1,
      "securityName": "Vanguard Total",
      "securitySymbol": "VTI",
      "sellDate": "2025-04-01",
      "sharesMicros": 6000000,
      "term": "long",
      "transactionId": 8,
    },
    {
      "accountId": 2,
      "accountName": "IRA",
      "acquiredDate": null,
      "basisCents": null,
      "gainCents": null,
      "proceedsCents": 46000,
      "securityId": 1,
      "securityName": "Vanguard Total",
      "securitySymbol": "VTI",
      "sellDate": "2025-04-01",
      "sharesMicros": 4000000,
      "term": "unknown",
      "transactionId": 8,
    },
  ],
  "totals": {
    "basisCents": 61500,
    "longTermGainCents": 7499,
    "proceedsCents": 68999,
    "shortTermGainCents": 0,
    "unknownBasisRows": 1,
  },
}
`;

exports[`investment and realized-gain HTTP parity > values each account at the latest price, with an optional as-of date > before split 1`] = `
[
  {
    "accountId": 1,
    "marketValueCents": 180500,
  },
  {
    "accountId": 2,
    "marketValueCents": 36100,
  },
  {
    "accountId": 3,
    "marketValueCents": 36100,
  },
]
`;

exports[`investment and realized-gain HTTP parity > values each account at the latest price, with an optional as-of date > today 1`] = `
[
  {
    "accountId": 1,
    "marketValueCents": 60417,
  },
  {
    "accountId": 3,
    "marketValueCents": 24067,
  },
]
`;
